--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-validator": "^5.2.0",
+    "lodash": "^4.17.10",
     "mockgoose": "^7.3.5",
     "mongoose": "^5.1.7",
     "nodemon": "^1.17.5"
