--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,17 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+
+    volumes:
+         - .:/apps
+
     ports:
       - "3000:3000"
     restart: unless-stopped
 
   mongo:
     image: mongo
-    command: bash -c "mongod | mongorestore /backup | wait"
+#    command: "bash -c \"mongod | mongorestore --drop /backup | wait | mongod\""
     restart: unless-stopped
     ports:
       - "27017:27017"
